hphp/hack/test/typecheck/typing_float_function_01.php.exp
File "typing_float_function_01.php", line 16, characters 6-6:
Invalid argument (Typing[4110])
File "typing_float_function_01.php", line 12, characters 13-17:
Expected float
File "typing_float_function_01.php", line 16, characters 6-6:
But got int
