hphp/hack/test/typecheck/typing_float_function_01.php
<?hh
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

function f1(float $x): void {
}

function f2(): void {
  f1(1);
}
